fix a bug
fix bug in header that was overlapping content

--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,11 @@ header div h3{
 .navbar li a{
     color: #fff;
 }
+body{
+    padding-top: 50px;
+}
 header{
+    top: 0;
     position:fixed;
     width: 100vw;
     z-index: 5;
